<resources>
    <!--    string for bottomMneu-->
    <string name="app_name">LahWibu</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_list">List</string>
    <string name="title_profile">Profile</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!--    String for onboardingScreen-->
    <string name="title_welcome_to_lahwibu">Welcome To LahWibu</string>
    <string name="desc_welcome_to_lahwibu">Welcome to LahWibu, your ultimate gateaway to endles anime adventure, where every series and movies brings a new world to explore and enjoy</string>
    <string name="title_select_your_favorite">Select Your Favorite</string>
    <string name="desc_select_your_favorite">Add favorite anime to keep track of what you love. Easily organize your favorite shows and always know where you left off</string>
    <string name="title_stay_update">Stay Update</string>
    <string name="desc_stay_update">Stay ahead with LahWibu and never miss new episodes and releases. Get instant update and be the first to watch the latest in the anime world!</string>

    <!--    stirng for loginScreen-->
    <string name="title_Login_or_signup">Login or Signup</string>
    <string name="desc_login_or_signup">Please login or signup to access your best anime </string>
    <string name="login_with">Continue with</string>

    <!--    string for homeScreen-->
    <string name="title_ongoing_anime">New Update Anime</string>
    <string name="title_complete_anime">Completed Anime</string>

    <!--     string for searchScreen-->
    <string name="title_not_found">No Result Found</string>
    <string name="desc_not_found">We can\'t find any Anime your search</string>
    <!--    string for detail anime-->
    <string name="btn_play">Play</string>
    <string name="title_sinopsis">Sinopsis</string>
    <string name="desc_sinopsis">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
    <string name="title_studio">Studio</string>
    <string name="rating">PG-13 - Remaja 13 tahun ke atas</string>
    <string name="genre">Action</string>
    <string name="title_episode">Episode</string>
    <string name="title_recomendation">Recomendation</string>
    <string name="episode_list">Episode %d</string>

    <!--    string for profile screen-->
    <string name="btn_logout">Logout</string>

    <!--    web client-->
    <string name="web_client_id">862392428062-4srph5kdb07ol2qorjiidftatfcmusim.apps.googleusercontent.com</string>
    <string name="cover_image_login">cover_image_login</string>
    <string name="genre_list">Action, Drama, Comedy</string>
    <string name="anime_title">Souso no frieren</string>
    <string name="see_all">see all</string>
    <string name="rating_text">8.5</string>
    <string name="type">TV</string>
    <string name="status">Ongoing</string>
    <string name="title_activity_detail_list">DetailListActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="retry">Try again</string>
    <string name="setting">setting</string>
    <string name="let_s_get_started">Let’s get started</string>
    <string name="sign_up_or_log_in_to_see_the_best_anime">Sign up or log in to see the best anime</string>
    <string name="continue_with_email">Continue with email account</string>
    <string name="continue_with_google">Continue with google</string>
    <string name="continue_with_facebook">Continue with facebook</string>
    <string name="watchlist">Watchlist</string>
    <string name="descending">descending</string>
    <string name="updated">updated</string>
    <string name="most_viewed">most viewed</string>
    <string name="popular">popular</string>
    <string name="latest">latest</string>
    <string name="oldest">oldest</string>
    <string name="ascending">ascending</string>
    <string name="_00_00">00:00</string>
    <string name="download">download</string>
    <string name="quality">Quality</string>
    <string name="share">share</string>


</resources>