<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/rating_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/baseline_star_24" />

        <TextView
            android:id="@+id/tv_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textColor="@color/dark_gray"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/rating_icon"
            app:layout_constraintStart_toEndOf="@+id/rating_icon"
            app:layout_constraintTop_toTopOf="@+id/rating_icon"
            tools:text="@string/rating_text" />

        <TextView
            android:id="@+id/tv_ratings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@color/dark_gray"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/rating_icon"
            app:layout_constraintTop_toBottomOf="@+id/tvType"
            tools:text="@string/rating" />

        <TextView
            android:id="@+id/tv_genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@color/dark_gray"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/rating_icon"
            app:layout_constraintTop_toBottomOf="@+id/tv_ratings"
            tools:text="@string/genre" />

        <TextView
            android:id="@+id/tvType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:background="@drawable/tv_border"
            android:paddingHorizontal="16dp"
            android:paddingVertical="4dp"
            android:textColor="@color/dark_gray"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/rating_icon"
            app:layout_constraintStart_toEndOf="@+id/tv_score"
            app:layout_constraintTop_toTopOf="@+id/rating_icon"
            tools:text="@string/type" />

        <TextView
            android:id="@+id/tvStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:background="@drawable/tv_border"
            android:paddingHorizontal="16dp"
            android:paddingVertical="4dp"
            android:textColor="@color/dark_gray"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/rating_icon"
            app:layout_constraintStart_toEndOf="@id/tvType"
            app:layout_constraintTop_toTopOf="@+id/rating_icon"
            tools:text="@string/status" />

        <Button
            android:id="@+id/btn_play"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingHorizontal="32dp"
            android:text="@string/btn_play"
            android:textColor="@color/light_gray"
            app:backgroundTint="@color/aksen"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintStart_toStartOf="@+id/tv_genre"
            app:layout_constraintTop_toBottomOf="@+id/tv_genre" />

        <Button
            android:id="@+id/btn_add_list"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:paddingHorizontal="32dp"
            android:text="@string/watchlist"
            app:strokeColor="@color/aksen"
            android:textColor="@color/light_gray"
            app:iconTint="@color/light_gray"
            app:icon="@drawable/round_add_24"
            app:layout_constraintBottom_toBottomOf="@+id/btn_play"
            app:layout_constraintStart_toEndOf="@+id/btn_play"
            app:layout_constraintTop_toTopOf="@+id/btn_play" />

        <TextView
            android:id="@+id/title_sinopsis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/title_sinopsis"
            android:textColor="@color/light_gray"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/btn_play"
            app:layout_constraintTop_toBottomOf="@+id/btn_play" />

        <TextView
            android:id="@+id/desc_sinopsis"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:textAlignment="gravity"
            android:textColor="@color/dark_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/title_sinopsis"
            app:layout_constraintTop_toBottomOf="@+id/title_sinopsis"
            tools:text="@string/desc_sinopsis" />

        <TextView
            android:id="@+id/title_studio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/title_studio"
            android:textColor="@color/light_gray"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/btn_play"
            app:layout_constraintTop_toBottomOf="@+id/desc_sinopsis" />

        <TextView
            android:id="@+id/desc_studio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:textColor="@color/dark_gray"
            app:layout_constraintEnd_toEndOf="@+id/desc_sinopsis"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/title_studio"
            app:layout_constraintTop_toBottomOf="@+id/title_studio"
            tools:text="@string/desc_sinopsis" />

        <TextView
            android:id="@+id/title_episode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/title_episode"
            android:textColor="@color/light_gray"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/btn_play"
            app:layout_constraintTop_toBottomOf="@+id/desc_studio" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_episode_list"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:layout_constraintEnd_toEndOf="@+id/desc_studio"
            app:layout_constraintStart_toStartOf="@+id/title_episode"
            app:layout_constraintTop_toBottomOf="@+id/title_episode" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="205dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>