<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue"
    tools:context=".ui.detail.DetailAnimeActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/cover_image"
                android:layout_width="match_parent"
                android:layout_height="340dp"
                android:contentDescription="@string/cover_image_login"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/frieren_image" />

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="340dp"
                android:background="@drawable/gradient_cover_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/title_anime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/anime_title"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/rating_icon"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:id="@+id/rating_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="4dp"
                app:layout_constraintBottom_toBottomOf="@id/cover_image"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/baseline_star_24" />

            <TextView
                android:id="@+id/tv_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/rating_text"
                android:textColor="@color/dark_gray"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@+id/rating_icon"
                app:layout_constraintStart_toEndOf="@+id/rating_icon"
                app:layout_constraintTop_toTopOf="@+id/rating_icon" />

            <TextView
                android:id="@+id/tvType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:background="@drawable/tv_border"
                android:paddingHorizontal="16dp"
                android:paddingVertical="4dp"
                android:text="@string/type"
                android:textColor="@color/dark_gray"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@+id/rating_icon"
                app:layout_constraintStart_toEndOf="@+id/tv_rating"
                app:layout_constraintTop_toTopOf="@+id/rating_icon" />

            <TextView
                android:id="@+id/tvStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:background="@drawable/tv_border"
                android:paddingHorizontal="16dp"
                android:paddingVertical="4dp"
                android:text="@string/status"
                android:textColor="@color/dark_gray"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@+id/rating_icon"
                app:layout_constraintStart_toEndOf="@id/tvType"
                app:layout_constraintTop_toTopOf="@+id/rating_icon" />

            <Button
                android:id="@+id/btn_play"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:paddingHorizontal="32dp"
                android:text="@string/btn_play"
                app:backgroundTint="@color/orange"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cover_image" />

            <TextView
                android:id="@+id/title_sinopsis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/title_sinopsis"
                android:textColor="@color/light_gray"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/btn_play"
                app:layout_constraintTop_toBottomOf="@+id/btn_play" />

            <TextView
                android:id="@+id/desc_sinopsis"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:textColor="@color/dark_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_sinopsis"
                tools:text="@string/desc_sinopsis" />

            <TextView
                android:id="@+id/title_studio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/title_studio"
                android:textColor="@color/light_gray"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/btn_play"
                app:layout_constraintTop_toBottomOf="@+id/desc_sinopsis" />
            <TextView
                android:id="@+id/desc_studio"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:textColor="@color/dark_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_studio"
                tools:text="@string/desc_sinopsis" />

            <TextView
                android:id="@+id/title_episode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/title_episode"
                android:textColor="@color/light_gray"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/btn_play"
                app:layout_constraintTop_toBottomOf="@+id/desc_studio" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_episode_list"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_episode" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>