<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue"
    tools:context=".ui.episode.EpisodeDetailActivity">


    <androidx.media3.ui.PlayerView
        android:id="@+id/player_view"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:fullscreen_enter_icon="@drawable/icon_fullscreen"
        app:fullscreen_exit_icon="@drawable/icon_fullscreen_exit"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"

        app:show_buffering="when_playing" />

    <TextView
        android:id="@+id/animeTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:textColor="@color/light_gray"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player_view"
        tools:text="@string/anime_title" />

    <Button
        android:id="@+id/btn_download"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/download"
        android:textColor="@color/light_gray"
        app:backgroundTint="@color/aksen"
        app:icon="@drawable/baseline_file_download_24"
        app:iconTint="@color/light_gray"
        app:layout_constraintBottom_toBottomOf="@+id/btn_quality"
        app:layout_constraintEnd_toStartOf="@+id/btn_share"
        app:layout_constraintStart_toEndOf="@+id/btn_quality"
        app:layout_constraintTop_toTopOf="@+id/btn_quality" />

    <Button
        android:id="@+id/btn_quality"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/quality"
        android:textColor="@color/light_gray"
        app:backgroundTint="@color/aksen"
        app:icon="@drawable/outline_play_arrow_24"
        app:iconTint="@color/light_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/animeTitle" />

    <Button
        android:id="@+id/btn_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/share"
        android:textColor="@color/light_gray"
        app:backgroundTint="@color/aksen"
        app:icon="@drawable/media3_icon_share"
        app:iconTint="@color/light_gray"
        app:layout_constraintBottom_toBottomOf="@+id/btn_quality"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_quality" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/title_episode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/title_episode"
        android:textColor="@color/light_gray"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/animeTitle"
        app:layout_constraintTop_toBottomOf="@+id/btn_quality" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/episode_rv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/animeTitle"
        app:layout_constraintStart_toStartOf="@+id/animeTitle"
        app:layout_constraintTop_toBottomOf="@+id/title_episode" />

    <ProgressBar
        android:id="@+id/loadingIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>